--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,14 @@
 aioftp==0.10.0
-aiohttp==1.0.5
-async-timeout==2.0.0
+aiohttp==3.2.1
+async-timeout==3.0.0
+attrs==18.1.0
 beautifulsoup4==4.6.0
 certifi==2018.1.18
 chardet==3.0.4
 discord.py==0.16.12
 docopt==0.6.2
 idna==2.6
+idna-ssl==1.0.1
 monotonic==1.4
 multidict==4.1.0
 python-valve==0.2.1
@@ -15,3 +17,4 @@ requests==2.18.4
 six==1.11.0
 urllib3==1.22
 websockets==3.4
+yarl==1.2.4
