--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,13 @@
 aioftp==0.10.1
 aiohttp==1.0.5
+asn1crypto==0.24.0
 async-timeout==3.0.0
 attrs==18.1.0
 beautifulsoup4==4.6.0
 certifi==2018.4.16
+cffi==1.11.5
 chardet==3.0.4
+cryptography==2.3.1
 cycler==0.10.0
 discord.py==0.16.12
 docopt==0.6.2
@@ -15,12 +18,13 @@ matplotlib==2.2.2
 monotonic==1.5
 multidict==4.3.1
 numpy==1.14.3
+pycparser==2.19
+PyMySQL==0.9.2
 pyparsing==2.2.0
 python-dateutil==2.7.3
 python-valve==0.2.1
 pytz==2018.4
 requests==2.18.4
-scipy==1.1.0
 six==1.11.0
 urllib3==1.22
 websockets==3.4
