--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,28 @@
 aioftp==0.10.1
 aiohttp==1.0.5
 asn1crypto==0.24.0
+astroid==2.0.4
 async-timeout==3.0.0
 attrs==18.1.0
 beautifulsoup4==4.6.0
 certifi==2018.4.16
 cffi==1.11.5
 chardet==3.0.4
+colorama==0.4.0
 cryptography==2.3.1
 cycler==0.10.0
 discord.py==0.16.12
 docopt==0.6.2
 idna==2.6
 idna-ssl==1.0.1
+isort==4.3.4
 kiwisolver==1.0.1
-matplotlib==2.2.2
+lazy-object-proxy==1.3.1
+mccabe==0.6.1
 monotonic==1.5
 multidict==4.3.1
-numpy==1.14.3
 pycparser==2.19
+pylint==2.1.1
 PyMySQL==0.9.2
 pyparsing==2.2.0
 python-dateutil==2.7.3
@@ -26,6 +30,8 @@ python-valve==0.2.1
 pytz==2018.4
 requests==2.18.4
 six==1.11.0
+typed-ast==1.1.0
 urllib3==1.22
 websockets==3.4
+wrapt==1.10.11
 yarl==1.2.4
